jiboiaParser.java
// Generated from jiboia.g4 by ANTLR 4.13.0
 import java.util.*; 
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class jiboiaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, WS=34, Soma=35, Subtracao=36, Multiplicacao=37, Divisao=38, 
		Modulo=39, NUMERO=40, TEXTO=41, ID=42;
	public static final int
		RULE_programa = 0, RULE_tipo = 1, RULE_infVariavel = 2, RULE_decVariavel = 3, 
		RULE_chamadaFuncao = 4, RULE_comPor = 5, RULE_inicioPor = 6, RULE_atualizaPor = 7, 
		RULE_comando = 8, RULE_atribuicao = 9, RULE_atribuicaoComposta = 10, RULE_comandoSe = 11, 
		RULE_comandoSenao = 12, RULE_comandoSenaoSe = 13, RULE_comandoEnquanto = 14, 
		RULE_bloco = 15, RULE_condicao = 16, RULE_atribuicaoBooleana = 17, RULE_operadorRelacional = 18, 
		RULE_expressao = 19, RULE_expressaoRelacional = 20, RULE_expressaoAritmetica = 21, 
		RULE_expressaoLogica = 22, RULE_operadorLogico = 23, RULE_termo = 24, 
		RULE_decVariavelBooleana = 25, RULE_fator = 26, RULE_variavel = 27, RULE_comandoImprimir = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "tipo", "infVariavel", "decVariavel", "chamadaFuncao", "comPor", 
			"inicioPor", "atualizaPor", "comando", "atribuicao", "atribuicaoComposta", 
			"comandoSe", "comandoSenao", "comandoSenaoSe", "comandoEnquanto", "bloco", 
			"condicao", "atribuicaoBooleana", "operadorRelacional", "expressao", 
			"expressaoRelacional", "expressaoAritmetica", "expressaoLogica", "operadorLogico", 
			"termo", "decVariavelBooleana", "fator", "variavel", "comandoImprimir"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'inteiro'", "'duplo'", "'texto'", "'booleano'", "'='", "'.'", 
			"'('", "','", "')'", "'por'", "';'", "':'", "'+='", "'-='", "'*='", "'/='", 
			"'%='", "'se'", "'senao'", "'senaose'", "'enquanto'", "'=='", "'!='", 
			"'<'", "'>'", "'<='", "'>='", "'e'", "'ou'", "'!'", "'verdadeiro'", "'falso'", 
			"'imprimir'", null, "'+'", "'-'", "'*'", "'/'", "'%'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "WS", "Soma", 
			"Subtracao", "Multiplicacao", "Divisao", "Modulo", "NUMERO", "TEXTO", 
			"ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "jiboia.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		Variavel x = new Variavel();
		ControleVariavel cv = new ControleVariavel();
		String saida="";
		int escopo;
		int tipo;
		String nome;
		String tipoJava;
		String t="    ";
		String idt="";

	public jiboiaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(jiboiaParser.EOF, 0); }
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public List<ComandoSeContext> comandoSe() {
			return getRuleContexts(ComandoSeContext.class);
		}
		public ComandoSeContext comandoSe(int i) {
			return getRuleContext(ComandoSeContext.class,i);
		}
		public List<ComandoEnquantoContext> comandoEnquanto() {
			return getRuleContexts(ComandoEnquantoContext.class);
		}
		public ComandoEnquantoContext comandoEnquanto(int i) {
			return getRuleContext(ComandoEnquantoContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof jiboiaListener ) ((jiboiaListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof jiboiaListener ) ((jiboiaListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			idt=t; saida+="public class Saida{\n" + idt + "public static void main(String args[]){\n"; idt+=t;
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4406638806046L) != 0)) {
				{
				setState(62);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(59);
					comando();
					}
					break;
				case 2:
					{
					setState(60);
					comandoSe();
					}
					break;
				case 3:
					{
					setState(61);
					comandoEnquanto();
					}
					break;
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(67);
			match(EOF);
			idt=t; saida+="\n"+idt+"}\n}";  System.out.println(saida);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoContext extends ParserRuleContext {
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof jiboiaListener ) ((jiboiaListener)listener).enterTipo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof jiboiaListener ) ((jiboiaListener)listener).exitTipo(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_tipo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InfVariavelContext extends ParserRuleContext {
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public InfVariavelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_infVariavel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof jiboiaListener ) ((jiboiaListener)listener).enterInfVariavel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof jiboiaListener ) ((jiboiaListener)listener).exitInfVariavel(this);
		}
	}

	public final InfVariavelContext infVariavel() throws RecognitionException {
		InfVariavelContext _localctx = new InfVariavelContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_infVariavel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(72);
				match(T__4);
				setState(73);
				expressao();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DecVariavelContext extends ParserRuleContext {
		public TipoContext tipo;
		public Token ID;
		public InfVariavelContext infVariavel;
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode ID() { return getToken(jiboiaParser.ID, 0); }
		public InfVariavelContext infVariavel() {
			return getRuleContext(InfVariavelContext.class,0);
		}
		public DecVariavelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decVariavel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof jiboiaListener ) ((jiboiaListener)listener).enterDecVariavel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof jiboiaListener ) ((jiboiaListener)listener).exitDecVariavel(this);
		}
	}

	public final DecVariavelContext decVariavel() throws RecognitionException {
		DecVariavelContext _localctx = new DecVariavelContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_decVariavel);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			((DecVariavelContext)_localctx).tipo = tipo();
			setState(77);
			((DecVariavelContext)_localctx).ID = match(ID);
			setState(78);
			((DecVariavelContext)_localctx).infVariavel = infVariavel();

				switch((((DecVariavelContext)_localctx).tipo!=null?_input.getText(((DecVariavelContext)_localctx).tipo.start,((DecVariavelContext)_localctx).tipo.stop):null)){
			        case "inteiro":
			            tipoJava = "int";
						break;
					case "duplo":
						tipoJava = "double";
						break;
					case "texto":
						tipoJava = "String";
						break;
					case "booleano":
						tipoJava = "boolean";
						break;
					}

				saida+= ""+ tipoJava + " " + (((DecVariavelContext)_localctx).ID!=null?((DecVariavelContext)_localctx).ID.getText():null) + (((DecVariavelContext)_localctx).infVariavel!=null?_input.getText(((DecVariavelContext)_localctx).infVariavel.start,((DecVariavelContext)_localctx).infVariavel.stop):null) + ";\n";
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ChamadaFuncaoContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(jiboiaParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(jiboiaParser.ID, i);
		}
		public List<ExpressaoContext> expressao() {
			return getRuleContexts(ExpressaoContext.class);
		}
		public ExpressaoContext expressao(int i) {
			return getRuleContext(ExpressaoContext.class,i);
		}
		public ChamadaFuncaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chamadaFuncao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof jiboiaListener ) ((jiboiaListener)listener).enterChamadaFuncao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof jiboiaListener ) ((jiboiaListener)listener).exitChamadaFuncao(this);
		}
	}

	public final ChamadaFuncaoContext chamadaFuncao() throws RecognitionException {
		ChamadaFuncaoContext _localctx = new ChamadaFuncaoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_chamadaFuncao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(ID);
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5) {
				{
				{
				setState(82);
				match(T__5);
				setState(83);
				match(ID);
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(89);
			match(T__6);
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 7703023845504L) != 0)) {
				{
				setState(90);
				expressao();
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__7) {
					{
					{
					setState(91);
					match(T__7);
					setState(92);
					expressao();
					}
					}
					setState(97);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(100);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComPorContext extends ParserRuleContext {
		public InicioPorContext inicioPor() {
			return getRuleContext(InicioPorContext.class,0);
		}
		public CondicaoContext condicao() {
			return getRuleContext(CondicaoContext.class,0);
		}
		public AtualizaPorContext atualizaPor() {
			return getRuleContext(AtualizaPorContext.class,0);
		}
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public ComPorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comPor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof jiboiaListener ) ((jiboiaListener)listener).enterComPor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof jiboiaListener ) ((jiboiaListener)listener).exitComPor(this);
		}
	}

	public final ComPorContext comPor() throws RecognitionException {
		ComPorContext _localctx = new ComPorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_comPor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(T__9);
			setState(103);
			match(T__6);
			setState(104);
			inicioPor();
			setState(105);
			match(T__10);
			setState(106);
			condicao();
			setState(107);
			match(T__10);
			setState(108);
			atualizaPor();
			setState(109);
			match(T__8);
			setState(110);
			match(T__11);
			setState(111);
			bloco();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InicioPorContext extends ParserRuleContext {
		public DecVariavelContext decVariavel() {
			return getRuleContext(DecVariavelContext.class,0);
		}
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public InicioPorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicioPor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof jiboiaListener ) ((jiboiaListener)listener).enterInicioPor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof jiboiaListener ) ((jiboiaListener)listener).exitInicioPor(this);
		}
	}

	public final InicioPorContext inicioPor() throws RecognitionException {
		InicioPorContext _localctx = new InicioPorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_inicioPor);
		try {
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
			case T__1:
			case T__2:
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				decVariavel();
				}
				break;
			case T__6:
			case T__30:
			case T__31:
			case NUMERO:
			case TEXTO:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				expressao();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtualizaPorContext extends ParserRuleContext {
		public List<AtribuicaoContext> atribuicao() {
			return getRuleContexts(AtribuicaoContext.class);
		}
		public AtribuicaoContext atribuicao(int i) {
			return getRuleContext(AtribuicaoContext.class,i);
		}
		public AtualizaPorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atualizaPor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof jiboiaListener ) ((jiboiaListener)listener).enterAtualizaPor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof jiboiaListener ) ((jiboiaListener)listener).exitAtualizaPor(this);
		}
	}

	public final AtualizaPorContext atualizaPor() throws RecognitionException {
		AtualizaPorContext _localctx = new AtualizaPorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_atualizaPor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			atribuicao();
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(118);
				match(T__7);
				setState(119);
				atribuicao();
				}
				}
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComandoContext extends ParserRuleContext {
		public ComandoImprimirContext comandoImprimir;
		public AtribuicaoContext atribuicao() {
			return getRuleContext(AtribuicaoContext.class,0);
		}
		public ChamadaFuncaoContext chamadaFuncao() {
			return getRuleContext(ChamadaFuncaoContext.class,0);
		}
		public DecVariavelContext decVariavel() {
			return getRuleContext(DecVariavelContext.class,0);
		}
		public ComandoImprimirContext comandoImprimir() {
			return getRuleContext(ComandoImprimirContext.class,0);
		}
		public ComPorContext comPor() {
			return getRuleContext(ComPorContext.class,0);
		}
		public ComandoSeContext comandoSe() {
			return getRuleContext(ComandoSeContext.class,0);
		}
		public ComandoEnquantoContext comandoEnquanto() {
			return getRuleContext(ComandoEnquantoContext.class,0);
		}
		public ComandoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof jiboiaListener ) ((jiboiaListener)listener).enterComando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof jiboiaListener ) ((jiboiaListener)listener).exitComando(this);
		}
	}

	public final ComandoContext comando() throws RecognitionException {
		ComandoContext _localctx = new ComandoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_comando);
		try {
			setState(140);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				saida+=""+idt;
				setState(126);
				atribuicao();
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				saida+=""+idt;
				setState(128);
				chamadaFuncao();
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				{
				saida+=""+idt;
				setState(130);
				decVariavel();
				}
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				{
				saida+=""+idt;
				setState(132);
				((ComandoContext)_localctx).comandoImprimir = comandoImprimir();
				saida+=(((ComandoContext)_localctx).comandoImprimir!=null?_input.getText(((ComandoContext)_localctx).comandoImprimir.start,((ComandoContext)_localctx).comandoImprimir.stop):null) + "\n";
				}
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				{
				saida+=""+idt;
				setState(136);
				comPor();
				}
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				{
				saida+=""+idt;
				setState(138);
				comandoSe();
				}
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				{
				setState(139);
				comandoEnquanto();
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtribuicaoContext extends ParserRuleContext {
		public VariavelContext variavel() {
			return getRuleContext(VariavelContext.class,0);
		}
		public AtribuicaoCompostaContext atribuicaoComposta() {
			return getRuleContext(AtribuicaoCompostaContext.class,0);
		}
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public AtribuicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribuicao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof jiboiaListener ) ((jiboiaListener)listener).enterAtribuicao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof jiboiaListener ) ((jiboiaListener)listener).exitAtribuicao(this);
		}
	}

	public final AtribuicaoContext atribuicao() throws RecognitionException {
		AtribuicaoContext _localctx = new AtribuicaoContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_atribuicao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			variavel();
			setState(146);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__12:
			case T__13:
			case T__14:
			case T__15:
			case T__16:
				{
				setState(143);
				atribuicaoComposta();
				}
				break;
			case T__4:
				{
				setState(144);
				match(T__4);
				setState(145);
				expressao();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtribuicaoCompostaContext extends ParserRuleContext {
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public AtribuicaoCompostaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribuicaoComposta; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof jiboiaListener ) ((jiboiaListener)listener).enterAtribuicaoComposta(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof jiboiaListener ) ((jiboiaListener)listener).exitAtribuicaoComposta(this);
		}
	}

	public final AtribuicaoCompostaContext atribuicaoComposta() throws RecognitionException {
		AtribuicaoCompostaContext _localctx = new AtribuicaoCompostaContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_atribuicaoComposta);
		try {
			setState(158);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__12:
				enterOuterAlt(_localctx, 1);
				{
				setState(148);
				match(T__12);
				setState(149);
				expressao();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 2);
				{
				setState(150);
				match(T__13);
				setState(151);
				expressao();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 3);
				{
				setState(152);
				match(T__14);
				setState(153);
				expressao();
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 4);
				{
				setState(154);
				match(T__15);
				setState(155);
				expressao();
				}
				break;
			case T__16:
				enterOuterAlt(_localctx, 5);
				{
				setState(156);
				match(T__16);
				setState(157);
				expressao();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComandoSeContext extends ParserRuleContext {
		public CondicaoContext condicao;
		public CondicaoContext condicao() {
			return getRuleContext(CondicaoContext.class,0);
		}
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public List<ComandoSenaoSeContext> comandoSenaoSe() {
			return getRuleContexts(ComandoSenaoSeContext.class);
		}
		public ComandoSenaoSeContext comandoSenaoSe(int i) {
			return getRuleContext(ComandoSenaoSeContext.class,i);
		}
		public ComandoSenaoContext comandoSenao() {
			return getRuleContext(ComandoSenaoContext.class,0);
		}
		public ComandoSeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comandoSe; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof jiboiaListener ) ((jiboiaListener)listener).enterComandoSe(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof jiboiaListener ) ((jiboiaListener)listener).exitComandoSe(this);
		}
	}

	public final ComandoSeContext comandoSe() throws RecognitionException {
		ComandoSeContext _localctx = new ComandoSeContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_comandoSe);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(T__17);
			saida+="\n" + idt + "if (";
			setState(162);
			((ComandoSeContext)_localctx).condicao = condicao();
			saida+=(((ComandoSeContext)_localctx).condicao!=null?_input.getText(((ComandoSeContext)_localctx).condicao.start,((ComandoSeContext)_localctx).condicao.stop):null) + "){\n";
			setState(164);
			match(T__11);
			idt+=t;
			setState(166);
			bloco();
			setState(170);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(167);
					comandoSenaoSe();
					}
					} 
				}
				setState(172);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			setState(174);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				{
				setState(173);
				comandoSenao();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
